Update index.html href="RunSmart"

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 					<div class="portfolio__work-item _anim-items">
 						<img src="img/works/pulse.jpg" alt="pulse">
 					</div>
-					<a href="https://timurbck.github.io/RunSmart/">
+					<a href="https://timurbck.github.io/Portfolio-RunSmart/">
 						<div class="portfolio-card__block">
 							<div class="portfolio-card__header">
 								<video loop muted autoplay   class="portfolio-card__video" src="videos/puls.webm"></video>
