Update index.html href="Uber"

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 					<div class="portfolio__work-item _anim-items">
 						<img src="img/works/uber.jpg" alt="uber">
 					</div>	
-					<a href="error.html">
+					<a href=https://timurbck.github.io/Portfolio-Uber/">
 						<div class="portfolio-card__block">
 							<div class="portfolio-card__header">
 								<video loop muted autoplay   class="portfolio-card__video" src="videos/uber.webm"></video>
