Update index.html href="MonsterClub"

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 					<div  id="plans" class="portfolio__work-item ">
 						<img src="img/works/plans.jpg" alt="plans">
 					</div>	
-					<a href="error.html">
+					<a href="https://timurbck.github.io/Portfolio-MonsterClub/">
 					<div class="portfolio-card__block">
 						<div class="portfolio-card__header">
 							<video loop muted autoplay   class="portfolio-card__video" src="videos/monster-club.webm"></video>
