Update index.html href="Gefest"

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 					<h2 class="portfolio-card__name">gefest</h2>
 					<div class="portfolio-card__logo logo__gefest"></div>
 					<div class="portfolio__work-item ">
-						<img src="img/works/bg5.jpg" alt="gefest">
+						<img src="https://timurbck.github.io/Portfolio-Gefest/" alt="gefest">
 					</div>
 					<a href="error.html">
 						<div class="portfolio-card__block">
