Update index.html href="Gefest/"

--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
 					<h2 class="portfolio-card__name">gefest</h2>
 					<div class="portfolio-card__logo logo__gefest"></div>
 					<div class="portfolio__work-item ">
-						<img src="https://timurbck.github.io/Portfolio-Gefest/" alt="gefest">
+						<img src="img/works/bg5.jpg" alt="gefest">
 					</div>
-					<a href="error.html">
+					<a href="https://timurbck.github.io/Portfolio-Gefest/">
 						<div class="portfolio-card__block">
 							<div class="portfolio-card__header">
 								<video loop muted autoplay   class="portfolio-card__video" src="videos/gefest.webm"></video>
