--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 				<article class="portfolio-card  _anim-items">
 					<h2 class="portfolio-card__name">RunSmart</h2>
 					<div class="portfolio-card__logo logo__smart"></div>
-					<div class="portfolio__work-item _anim-items">
+					<div class="portfolio__work-item">
 						<img src="img/works/pulse.jpg" alt="pulse">
 					</div>
 					<a href="https://timurbck.github.io/Portfolio-RunSmart/">
@@ -275,7 +275,7 @@
 				<article class="portfolio-card  _anim-items">
 					<h2 class="portfolio-card__name">Uber</h2>
 					<div class="portfolio-card__logo logo__uber"></div>
-					<div class="portfolio__work-item _anim-items">
+					<div class="portfolio__work-item">
 						<img src="img/works/uber.jpg" alt="uber">
 					</div>	
 					<a href="https://timurbck.github.io/Portfolio-Uber/">
